crates/jolt_java_syntax/tests/snapshots/corpus__style__modules__comment_barrier.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
module demo {
  requires z.lib;
  // keep requires barrier
  requires a.lib;
  exports z.api;
  // keep exports barrier
  exports a.api;
}

syntax:
syntax:
CompilationUnit
  ModuleDeclaration
    Identifier "module" @ 0..6 trailing=[Whitespace " "]
    Name
      Identifier "demo" @ 7..11 trailing=[Whitespace " "]
    LBrace "{" @ 12..13
    ModuleDirective
      RequiresDirective
        Identifier "requires" @ 16..24 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
        QualifiedName
          Identifier "z" @ 25..26
          Dot "." @ 26..27
          Identifier "lib" @ 27..30
        Semicolon ";" @ 30..31
    ModuleDirective
      RequiresDirective
        Identifier "requires" @ 61..69 leading=[Newline "\n", Whitespace "  ", LineComment "// keep requires barrier", Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
        QualifiedName
          Identifier "a" @ 70..71
          Dot "." @ 71..72
          Identifier "lib" @ 72..75
        Semicolon ";" @ 75..76
    ModuleDirective
      ExportsDirective
        Identifier "exports" @ 79..86 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
        QualifiedName
          Identifier "z" @ 87..88
          Dot "." @ 88..89
          Identifier "api" @ 89..92
        Semicolon ";" @ 92..93
    ModuleDirective
      ExportsDirective
        Identifier "exports" @ 122..129 leading=[Newline "\n", Whitespace "  ", LineComment "// keep exports barrier", Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
        QualifiedName
          Identifier "a" @ 130..131
          Dot "." @ 131..132
          Identifier "api" @ 132..135
        Semicolon ";" @ 135..136
    RBrace "}" @ 137..138 leading=[Newline "\n"]
  Eof "" @ 139..139 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
