crates/jolt_java_syntax/tests/snapshots/corpus__style__modules__name_list_comments.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
module demo {
  provides com.example.Plugin with com.example.impl.PluginImpl, // first impl
  com.example.impl.PluginFallback;
  opens com.example.internal to friend.one, // first open
  friend.two;
  exports com.example.api to partner.one, // first export
  partner.two;
}

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  ModuleDeclaration
    AnnotationList
    Identifier "module" @ 0..6 trailing=[Whitespace " "]
    Name
      Identifier "demo" @ 7..11 trailing=[Whitespace " "]
    LBrace "{" @ 12..13
    ModuleDirectiveList
      ModuleDirective
        ProvidesDirective
          Identifier "provides" @ 16..24 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
          QualifiedName
            QualifiedNameSegmentNode
              AnnotationList
              Identifier "com" @ 25..28
            Dot "." @ 28..29
            NameSegmentDotList
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "example" @ 29..36
              Dot "." @ 36..37
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "Plugin" @ 37..43 trailing=[Whitespace " "]
          Identifier "with" @ 44..48 trailing=[Whitespace " "]
          NameList
            QualifiedName
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "com" @ 49..52
              Dot "." @ 52..53
              NameSegmentDotList
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "example" @ 53..60
                Dot "." @ 60..61
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "impl" @ 61..65
                Dot "." @ 65..66
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "PluginImpl" @ 66..76
            Comma "," @ 76..77 trailing=[Whitespace " ", LineComment "// first impl"]
            QualifiedName
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "com" @ 94..97 leading=[Newline "\n", Whitespace "  "]
              Dot "." @ 97..98
              NameSegmentDotList
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "example" @ 98..105
                Dot "." @ 105..106
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "impl" @ 106..110
                Dot "." @ 110..111
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "PluginFallback" @ 111..125
          Semicolon ";" @ 125..126
      ModuleDirective
        OpensDirective
          Identifier "opens" @ 129..134 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
          QualifiedName
            QualifiedNameSegmentNode
              AnnotationList
              Identifier "com" @ 135..138
            Dot "." @ 138..139
            NameSegmentDotList
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "example" @ 139..146
              Dot "." @ 146..147
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "internal" @ 147..155 trailing=[Whitespace " "]
          Identifier "to" @ 156..158 trailing=[Whitespace " "]
          NameList
            QualifiedName
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "friend" @ 159..165
              Dot "." @ 165..166
              NameSegmentDotList
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "one" @ 166..169
            Comma "," @ 169..170 trailing=[Whitespace " ", LineComment "// first open"]
            QualifiedName
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "friend" @ 187..193 leading=[Newline "\n", Whitespace "  "]
              Dot "." @ 193..194
              NameSegmentDotList
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "two" @ 194..197
          Semicolon ";" @ 197..198
      ModuleDirective
        ExportsDirective
          Identifier "exports" @ 201..208 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
          QualifiedName
            QualifiedNameSegmentNode
              AnnotationList
              Identifier "com" @ 209..212
            Dot "." @ 212..213
            NameSegmentDotList
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "example" @ 213..220
              Dot "." @ 220..221
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "api" @ 221..224 trailing=[Whitespace " "]
          Identifier "to" @ 225..227 trailing=[Whitespace " "]
          NameList
            QualifiedName
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "partner" @ 228..235
              Dot "." @ 235..236
              NameSegmentDotList
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "one" @ 236..239
            Comma "," @ 239..240 trailing=[Whitespace " ", LineComment "// first export"]
            QualifiedName
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "partner" @ 259..266 leading=[Newline "\n", Whitespace "  "]
              Dot "." @ 266..267
              NameSegmentDotList
                QualifiedNameSegmentNode
                  AnnotationList
                  Identifier "two" @ 267..270
          Semicolon ";" @ 270..271
    RBrace "}" @ 272..273 leading=[Newline "\n"]
  CompilationUnitDeclarationList
  Eof "" @ 274..274 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
