crates/jolt_java_syntax/tests/snapshots/corpus__style__modules__sorted_directive_comments.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
module demo {
  uses z.Service; // z service
  uses a.Service; // a service
  exports z.api; // z api
  exports a.api; // a api
}

syntax:
syntax:
CompilationUnit
  ImportDeclarationList
  ModuleDeclaration
    AnnotationList
    Identifier "module" @ 0..6 trailing=[Whitespace " "]
    Name
      Identifier "demo" @ 7..11 trailing=[Whitespace " "]
    LBrace "{" @ 12..13
    ModuleDirectiveList
      ModuleDirective
        UsesDirective
          Identifier "uses" @ 16..20 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
          QualifiedName
            QualifiedNameSegmentNode
              AnnotationList
              Identifier "z" @ 21..22
            Dot "." @ 22..23
            NameSegmentDotList
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "Service" @ 23..30
          Semicolon ";" @ 30..31 trailing=[Whitespace " ", LineComment "// z service"]
      ModuleDirective
        UsesDirective
          Identifier "uses" @ 47..51 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
          QualifiedName
            QualifiedNameSegmentNode
              AnnotationList
              Identifier "a" @ 52..53
            Dot "." @ 53..54
            NameSegmentDotList
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "Service" @ 54..61
          Semicolon ";" @ 61..62 trailing=[Whitespace " ", LineComment "// a service"]
      ModuleDirective
        ExportsDirective
          Identifier "exports" @ 78..85 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
          QualifiedName
            QualifiedNameSegmentNode
              AnnotationList
              Identifier "z" @ 86..87
            Dot "." @ 87..88
            NameSegmentDotList
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "api" @ 88..91
          NameList
          Semicolon ";" @ 91..92 trailing=[Whitespace " ", LineComment "// z api"]
      ModuleDirective
        ExportsDirective
          Identifier "exports" @ 104..111 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
          QualifiedName
            QualifiedNameSegmentNode
              AnnotationList
              Identifier "a" @ 112..113
            Dot "." @ 113..114
            NameSegmentDotList
              QualifiedNameSegmentNode
                AnnotationList
                Identifier "api" @ 114..117
          NameList
          Semicolon ";" @ 117..118 trailing=[Whitespace " ", LineComment "// a api"]
    RBrace "}" @ 128..129 leading=[Newline "\n"]
  CompilationUnitDeclarationList
  Eof "" @ 130..130 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
